Fix headline alignment

--- a/beat-reactor/style.css
+++ b/beat-reactor/style.css
@@ -132,49 +132,48 @@
 
     .content {
         inline-size: 100%;
+        display: grid;
+        place-items: center;
+        background-color: var(--surface-1);
+
     }
 
     .content-wrapper {
         display: grid;
-        place-items: center;
         gap: var(--size-8);
-        background-color: var(--surface-1);
         padding-block: var(--size-8);
-        inline-size: 100%;
+        padding-inline: 32px;
+
+        @media (width >=786px) {
+            padding-inline: min(16.5cqi, var(--size-12));
+        }
+
     }
 
     .headline-1 {
         grid-area: 1/1;
         font: var(--headline-small-screen);
-        color: black;
+        color: var(--surface-1);
         -webkit-text-stroke: 2px var(--headline-shadow-color);
         text-shadow: 1px 1px var(--headline-shadow-color), 2px 2px var(--headline-shadow-color),
             3px 3px var(--headline-shadow-color), 4px 4px var(--headline-shadow-color), 5px 5px var(--headline-shadow-color),
-            6px 6px var(--headline-shadow-color), 7px 7px var(--headline-shadow-color), 8px 8px var(--headline-shadow-color),
-            9px 9px var(--headline-shadow-color), 10px 10px var(--headline-shadow-color);
+            6px 6px var(--headline-shadow-color), 7px 7px var(--headline-shadow-color);
 
         text-transform: uppercase;
         paint-order: stroke;
+        max-inline-size: 6ch;
+        text-wrap: balance;
+        text-align: start;
 
 
-
-        text-align: center;
-
-        /* Adjust padding for "Rocks" text overflow; adapt/remove for custom headlines */
-        padding-inline-end: 0.6ch;
 
         @media (width >=768px) {
             font: var(--headline-large-screen);
+            text-shadow: 1px 1px var(--headline-shadow-color), 2px 2px var(--headline-shadow-color),
+                3px 3px var(--headline-shadow-color), 4px 4px var(--headline-shadow-color), 5px 5px var(--headline-shadow-color),
+                6px 6px var(--headline-shadow-color), 7px 7px var(--headline-shadow-color), 8px 8px var(--headline-shadow-color),
+                9px 9px var(--headline-shadow-color), 10px 10px var(--headline-shadow-color);
         }
-    }
-}
-
-
-@layer overrides {
-    .text-align-start {
-        display: inline-block;
-        inline-size: 100%;
-        text-align: start;
     }
 }
 
@@ -230,6 +229,7 @@
         color: var(--on-primary);
         border-radius: var(--radius-4);
         border-width: 0;
+        inline-size: max-content;
 
         .text {
             min-block-size: var(--button-primary-min-block-size);
@@ -251,6 +251,7 @@
         padding: var(--button-icon-padding);
         border-width: 0;
         border-radius: var(--radius-round);
+
 
         @media (width > 768px) {
             inline-size: var(--button-icon-large-screen-size);
